--- a/www.resounding.ca/Areas/Tournaments/Views/Schedule/Index.cshtml
+++ b/www.resounding.ca/Areas/Tournaments/Views/Schedule/Index.cshtml
@@ -24,6 +24,7 @@
         <link rel="Stylesheet" type="text/css" href="/Content/css/bootstrap-responsive.css" />
         <link rel="Stylesheet" type="text/css" href="/Content/css/resounding.css" />
         <link rel="Stylesheet" type="text/css" href="/Content/css/tournament.css" />
+        <link rel="Stylesheet" type="text/css" href="/Content/css/fullcalendar.css" />
 
         <script type="text/javascript">
             var _gaq = _gaq || [];
@@ -45,60 +46,7 @@
                 <h1>@Model.TournamentName<small>&nbsp;Building software for your business.</small></h1>
             </div>
 
-            <div id="filter" class="navbar">
-                <div class="navbar-inner">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </a>
-                    <div class="nav-collapse collapse">                        
-                        <ul class="nav nav-pills">
-                            <li class="active">
-                                <a href="#" class="view">List</a>
-                            </li>
-                            <li>
-                                <a href="#" class="view">Day</a>
-                            </li>
-                            <li>
-                                <a href="#" class="view">Week</a>
-                            </li>
-                            <li>
-                                <a href="#" class="view">Month</a>
-                            </li>
-                            <li class="divider-vertical"></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle current-team-filter" data-toggle="dropdown">
-                                    @Model.TeamFilter
-                                    <b class="caret"></b>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#" class="team-filter" data-id="" data-toggle="dropdown">All Teams</a>
-                                        @foreach (var team in Model.Teams) {
-                                            <a href="#" class="team-filter" data-id="@team.Id" data-toggle="dropdown">@team.Name</a>
-                                        }
-                                    </li>
-
-                                </ul>
-                            </li>
-                        </ul>
-                        <ul class="nav pull-right">                            
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    More
-                                    <b class="caret"></b>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <button type="button" class="btn btn-danger btn-block">Reset Data</button>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            <div id="filter" class="navbar"></div>
 
             <div id="main"></div>
         </div>
