--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -14,9 +14,7 @@
 
 	body
 	{
-		background-image:			url('images/overlay.png'),		url('images/bg.jpg');
-		background-repeat:			repeat,							no-repeat;
-		background-size:			auto,							100% 100%;
+		background-color: #ce3000;
 	}
 
 		body.is-loading *
@@ -393,6 +391,15 @@
 			display: none;
 		}
 
+		.icon.fa-linkedin {
+			background-color: #287bbc;
+			border-radius: 4px;
+		}
+
+		#nav a.icon.fa-linkedin span {
+			background-color: #222222;			
+		}
+
 /*********************************************************************************/
 /* Nav                                                                           */
 /*********************************************************************************/
@@ -431,29 +438,23 @@
 		position: relative;
 	}
 
-	/* Me */
-
-		#me
+		.panel .pic
 		{
+			position: relative;
+			display: block;
 		}
 
-			#me .pic
+			.panel .pic:before
 			{
-				position: relative;
-				display: block;
+				content: '';
+				position: absolute;
+				top: 0;
+				left: 0;
+				background: url('images/overlay.png');
+				width: 100%;
+				height: 100%;
+				z-index: 1;
 			}
-
-				#me .pic:before
-				{
-					content: '';
-					position: absolute;
-					top: 0;
-					left: 0;
-					background: url('images/overlay.png');
-					width: 100%;
-					height: 100%;
-					z-index: 1;
-				}
 
 /*********************************************************************************/
 /* Footer                                                                        */
